<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shmalendar!</string>
    <string name="title_activity_event_editor">EventEditor</string>
    <string name="event_test_button">Add Guest</string>
    <string name="events_month_previous">Prev</string>
    <string name="events_month_next">Next</string>
    <string name="label_from">From</string>
<<<<<<< HEAD
    <string name="label_to">To</string>
    <string name="label_date">Date</string>
    
    
<!-- ACTION BAR ACTIONS -->
	<string name="action_done">Done</string>    
	<string name="action_add">Add</string>
	<string name="action_cancel">Cancel</string>
    
    
    
<!-- HINTS -->
    
=======
    <string name="label_to">to</string>
    <string name="label_date">Date</string>

    <!-- ACTION BAR ACTIONS -->
    <string name="action_done">Done</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>

    <!-- HINTS -->

>>>>>>> origin/MonthView
    <string name="hint_title">Title</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_notes">Add notes here</string>
    <string name="hint_venue">Venue</string>
    <string name="hint_lat">Latitude</string>
    <string name="hint_long">Longitude</string>
    <string name="hint_start_time">start time</string>
    <string name="hint_end_time">end time</string>
<<<<<<< HEAD
    
    
=======
    <string name="title_activity_single_event_view">SingleEventView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
>>>>>>> origin/MonthView

</resources>
