<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yeapMAD.assignment1.view.SingleEventView" >
    
    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
		android:hint="@string/hint_title"/>
    
     <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_title"
        android:hint="@string/hint_date"/>

    <TextView
        android:id="@+id/event_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_title"
        android:layout_toRightOf="@id/event_date"
        android:textColor="#000000"
        android:hint="@string/hint_start_time"/>
    
    <TextView
        android:id="@+id/event_label_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_title"
        android:layout_toRightOf="@id/event_start_time"
        android:text="@string/label_to" />
    
    <TextView
        android:id="@+id/event_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_title"
        android:layout_toRightOf="@id/event_label_to"
        android:hint="@string/hint_end_time" />

    <TextView
        android:id="@+id/event_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_date"
        android:hint="@string/hint_venue" />
       
    <TextView
        android:id="@+id/event_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_venue"
        android:hint="@string/hint_notes"  />

</RelativeLayout>
