<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

 	<EditText
	    android:id="@+id/event_title"
	    android:layout_alignParentTop="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/hint_title" />
<!--     
    <Spinner 
        android:id="@+id/event_date"
        android:layout_below="@id/event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/event_time" 
        android:hint="@string/hint_date"/>
    
    <Spinner
        android:id="@id/event_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_title" 
        android:layout_alignParentRight="true" 
        android:hint="@string/hint_time" />
    
 -->    
 	
	<EditText 
	    android:id="@+id/event_venue"
	    android:layout_below="@id/event_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/hint_venue"/>
	
	<EditText 
	    android:id="@+id/event_note"
	    android:layout_below="@id/event_venue"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/hint_notes" /> 
	    
	<DatePicker 
 	    android:id="@+id/event_date"
 	    android:spinnersShown="false"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@id/event_note" 
 	    android:layout_alignParentLeft="true" />
 	
 	<TimePicker 
 	    android:id="@+id/event_time"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@id/event_note"
 	    android:layout_toRightOf="@id/event_date"
 	    android:layout_alignParentRight="true" />

	<Button 
	    android:id="@+id/test_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/event_date"
	    android:layout_alignParentRight="true"
	    android:text="@string/event_test_button" 
	    android:onClick="onDoneClick" />
	
 
</RelativeLayout>
